changed "Junior верстальщик"

--- a/index.html
+++ b/index.html
@@ -37,8 +37,8 @@
 
     <section class="hero-bg">
       <div class="container">
-      <h1 class="heading" align="center">Евгений Воронов</h1>
-      <p align="center">Junior верстальщик</p>
+      <h1 class="heading">Евгений Воронов</h1>
+      <p class="html-imposer">Junior верстальщик</p>
       </div>
     </section>
 
@@ -171,7 +171,7 @@
         </p>
         
         <p>В феврале - марте 2019 года, по согласованию с Кемеровским Государственным Университетом, прочитал
-        курс лекций на тему въездного туризма в Крыму. Из числа слушателей, набрал 50 человек для работы в 
+        курс лекций на тему въездного туризма в Крыму. Из числа слушателей, набрал 50 человек для работы в<br> 
         ООО Библио Глобус Крым на должности:
         <ol>
           <li>Отельный гид.</li>
