--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <meta name="description" content="Мой первый документ HTML5">
     <meta name="author" content="Евгений Воронов">
     <link rel="stylesheet" href="style.css">
+    <link rel="shortcut icon" type="image/ico" href="favicon.ico">
     
     <title>Евгений Воронов. Портфолио Junior верстальщика</title>
     <style>
