--- a/index.html
+++ b/index.html
@@ -119,6 +119,9 @@
           <dd class="level"><div style="width: 60%;">60%</div></dd>
           <dt class="skill-css">CSS</dt>
           <dd class="level"><div style="width: 40%;">40%</div></dd>
+          <dt class="skill-js">JS</dt>
+          <dd class="level"><div style="width: 2%;">0%</div></dd>
+          
           
         </dl>
       </div>
