--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <meta name="description" content="Мой первый документ HTML5">
     <meta name="author" content="Евгений Воронов">
     <link rel="stylesheet" href="style.css">
-    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon" />
+    <link class="favicon" rel="shortcut icon" href="favicon.ico" type="image/x-icon" />
     
     <title>Евгений Воронов. Портфолио Junior верстальщика</title>
     <style>
