Добавил свой первый проект
Сайт города Седона

--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="ru">
   <head>
+
     <script src="https://kit.fontawesome.com/c05da54bd3.js" crossorigin="anonymous"></script>
 
     <link href="https://fonts.googleapis.com/css?family=Montserrat:400,500,700|Old+Standard+TT&display=swap&subset=cyrillic" rel="stylesheet">
@@ -131,14 +132,14 @@
         По мере выполнения новых проектов, буду добавлять их сюда, меняя дизайн раздела.
       </p>
 <div class="project-image">
-  <img class="Keks" src="files/project.jpg" width="928" height="536" alt="Сайт инструктора Кекса">
+  <img class="sedona" src="img/sedona-index-crop.jpg" width="928" height="2002" alt="Сайт города Седона">
 </div>
-      <h3>Сайт инструктора Кекса</h3>
-      <p>Небольшой лендинг о школе для начинающих. Этот сайт был сделан в ходе 
-        первых обучающих уроков<br> <a href="https://htmlacademy.ru/courses/basic-html-css" target="_blank">
+      <h3>Сайт городка Седона</h3>
+      <p>Небольшой сайт о туристическом городке Седона в штате Аризона. Этот сайт был сделан в ходе 
+        курса HTML и CSS, уровень-1<a href="https://htmlacademy.ru/courses/basic-html-css" target="_blank">
         HTML-академии.</a>
       </p>
-<a class="button" href="source/project/index.html" target="_blank">Открыть страницу</a>
+<a class="button" href="https://env1975.github.io/1054825-sedona-27/index.html" target="_blank">Открыть страницу Седоны</a>
 
 <h3 id="My-background">Мой нынешний опыт работы</h3>
 
@@ -231,11 +232,16 @@
     </section>
 
     <footer id="contacts" class="page-footer">
+
       <div class="container">
+
         <a class="footer-email" href="mailto:gremlin1975@mail.ru">gremlin1975@mail.ru</a> 
         <a class="footer-phone" href="tel:+20 (120) 555-52-57">+20 (120) 555-52-57</a>
         <a class="footer-facebook" href="https://www.facebook.com/env1975">Evgeny Voronov</a>
+        
       </div>
+      
     </footer>
+
   </body>
 </html>
