первый профильный сертификат

--- a/index.html
+++ b/index.html
@@ -199,15 +199,28 @@
         Предыдущие места работы и выполняемые мною функции, можно найти в 
         моём резюме, размещённом на <b> <a class="button-2" href="https://hh.ru/resume/8afc764eff02ccd84c0039ed1f423459485651" target="_blank">www.hh.ru</b></a> 
         </p>
+
+        <div>
+          <h3 id="Education">Курсы по Веб-разработке</h3>
+          <p> 
+            На сегодняшний день, один профильный сертификат уже имеется!
+            Надеюсь, что за 2020 год, в этом разделе ещё прибавятся сертификаты о пройденных курсах в полном соответствии
+            с моей затеей о кардинальной смене профессии.
+          </p>
     
-      <h3 id="Education">Моё образование + курсы</h3>
+          <div class="html-awards">
+            <img class="html-academy" src="files/html-level1.jpg" width="76" height="128" alt="Сертификат HTML-академии">
+          </div>
+        </div>
+
+<section class="education">
+    <div>
+      <h3>Моё образование + курсы</h3>
       <p>
         Образование высшее, о чём свидетельствует диплом.<br>
-        Курсов, пока что не много и они все не связаны с <b>front-end разработкой</b>, но это дело наживное. 
-        Надеюсь, что за 2020 год, в этом разделе прибавится сертификатов о пройденных курсах в полном соответствии
-        с моей затеей о кардинальной смене профессии.
+        Имею несколько пройденных курсов, не связанных с инженерным образованием.
       </p>
-      
+
       <div class="certificates">
         <img class="Diploma" src="files/diploma.jpg" width="128" height="76" alt="Диплом о высшем образовании">
       </div>
@@ -227,7 +240,8 @@
       <div class="certificates">
         <img class="c-2015" src="files/2015.jpg" width="128" height="76" alt="Сертификат по курсу 2015 г.">
       </div>
-
+    </div>
+  </section>
       </div>
     </section>
 
