--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 		<title>Евгений Воронов. Портфолио Junior верстальщика</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
-		<meta name="description" content="Мой первый документ HTML5">
+		<meta name="description" content="Мой первый сайт">
         <meta name="author" content="Евгений Воронов"> 
 		<link rel="stylesheet" href="assets/css/main.css" />
 		<link class="favicon" rel="shortcut icon" href="favicon.ico" type="image/x-icon" />
