--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@
 						</div>
 					</div>
 					<footer>
-						<p>Почему бы вам не связаться со мной немедленно?</p>
+						<p>Почему бы вам не связаться со мной прямо сейчас?</p>
 						<a href="#contact" class="button large scrolly">Напишите мне письмо</a>
 					</footer>
 				</div>
