--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 							</header>
 							<p>Кардинально меняю профессию. Прошёл обучение на курсе HTML-академии: 
 								<a href="https://htmlacademy.ru/intensive/htmlcss">HTML+CSS, Первый уровень</a> 
-								и, начал обучение <a href="https://htmlacademy.ru/intensive/adaptive">на HTML+CSS, Второй уровень.</a><br>
+								и начал обучение <a href="https://htmlacademy.ru/intensive/adaptive">на HTML+CSS, Второй уровень.</a><br>
 								А что я умею делать помимо обучения на front-end разработчика, можно посмотреть тут: 
 								<a href="https://hh.ru/resume/8afc764eff02ccd84c0039ed1f423459485651">HeadHunter</a>.
 							</p>
@@ -80,7 +80,7 @@
 							<section class="box style1">
 								<span class="icon featured fa-thumbs-up"></span>
 								<h3>Образование</h3>
-								<p>Образование у меня высшее, техническое, о чём свидетельствует 
+								<p>Образование у меня высшее техническое, о чём свидетельствует 
 									<a href="https://drive.google.com/open?id=1RdiWHrh4Dsohqr_h00qaxq5qiTtl9glY">диплом</a>. 
 								   Однако, жизнь повернулась так, что
 								   профессиионалом я стал не в инженерном деле, а в туризме. 
@@ -90,7 +90,7 @@
 					</div>
 					<footer>
 						<p>Умею многое. Работаю всегда исключительно ответственно и профессионально. 
-						   За подробностями, пойдём сюда:
+						   За подробностями пойдём сюда:
 							<a href="https://hh.ru/resume/8afc764eff02ccd84c0039ed1f423459485651">HeadHunter</a>
 						</p>
 						<a href="#portfolio" class="button large scrolly">Выполненные мною проекты</a>
@@ -102,8 +102,8 @@
 			<article id="portfolio" class="wrapper style3">
 				<div class="container">
 					<header>
-						<h2>Проекты, которые я выполнил и над которыми я работаю</h2>
-						<p>Этот раздел будет постоянно пополняться. На сегодняшний день, он не поражает 
+						<h2>Проекты, которые я выполнил, и над которыми я работаю</h2>
+						<p>Этот раздел будет постоянно пополняться. На сегодняшний день он не поражает 
 						   многобразием. Но, это дело наживное. Дорогу осилит идущий.
 						</p>
 					</header>
@@ -185,7 +185,7 @@
 				<div class="container medium">
 					<header>
 						<h2>Давайте сотрудничать!</h2>
-						<p>Форма отправки письма пока не работает, поэтому, свяжитесь со мной через 
+						<p>Форма отправки письма пока не работает, поэтому свяжитесь со мной через 
 						   социальные сети. Я обязательно отвечу.</p>
 					</header>
 					<div class="row">
