--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 	<head>
 		<title>Евгений Воронов. Портфолио Junior верстальщика</title>
 		<meta charset="utf-8" />
+		<meta http-equiv="content-type" content="text/html; charset=utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<meta name="description" content="Мой первый сайт">
         <meta name="author" content="Евгений Воронов"> 
@@ -190,13 +191,13 @@
 					</header>
 					<div class="row">
 						<div class="col-12">
-							<form method="post" action="send.php">
+							<form method="POST" action="assets/php/send.php">
 								<div class="row">
 									<div class="col-6 col-12-small">
 										<input type="text" name="name" id="name" placeholder="Ваше имя (Форма пока не работает)" required />
 									</div>
 									<div class="col-6 col-12-small">
-										<input type="text" name="email" id="email" placeholder="Email (Форма пока не работает)" required />
+										<input type="email" name="email" id="email" placeholder="Email (Форма пока не работает)" required />
 									</div>
 									<div class="col-12">
 										<input type="text" name="subject" id="subject" placeholder="Тема сообщения (Форма пока не работает)" required />
