--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 	<head>
 		<title>Евгений Воронов. Портфолио Junior верстальщика</title>
+		<meta name="yandex-verification" content="da0e2efe4607e8dd" />
 		<meta charset="utf-8" />
 		<meta http-equiv="content-type" content="text/html; charset=utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
@@ -191,7 +192,7 @@
 					</header>
 					<div class="row">
 						<div class="col-12">
-							<form method="POST" action="assets/php/send.php">
+							<form method="POST" action="send.php">
 								<div class="row">
 									<div class="col-6 col-12-small">
 										<input type="text" name="name" id="name" placeholder="Ваше имя (Форма пока не работает)" required />
