--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
 		<meta name="yandex-verification" content="da0e2efe4607e8dd" />
 		<meta charset="utf-8" />
 		<meta http-equiv="content-type" content="text/html; charset=utf-8" />
-		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
+		<!--<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />-->
+		<meta name="viewport" content="width=device-width, user-scalable=yes">
 		<meta name="description" content="Мой первый сайт">
         <meta name="author" content="Евгений Воронов"> 
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -198,7 +199,7 @@
 										<input type="text" name="name" id="name" placeholder="Ваше имя (Форма пока не работает)" required />
 									</div>
 									<div class="col-6 col-12-small">
-										<input type="email" name="email" id="email" placeholder="Email (Форма пока не работает)" required />
+										<input type="text" name="email" id="email" placeholder="Email (Форма пока не работает)" required />
 									</div>
 									<div class="col-12">
 										<input type="text" name="subject" id="subject" placeholder="Тема сообщения (Форма пока не работает)" required />
