--- a/index.html
+++ b/index.html
@@ -5,8 +5,7 @@
 		<meta name="yandex-verification" content="da0e2efe4607e8dd" />
 		<meta charset="utf-8" />
 		<meta http-equiv="content-type" content="text/html; charset=utf-8" />
-		<!--<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />-->
-		<meta name="viewport" content="width=device-width, user-scalable=yes">
+		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=yes" />
 		<meta name="description" content="Мой первый сайт">
         <meta name="author" content="Евгений Воронов"> 
 		<link rel="stylesheet" href="assets/css/main.css" />
