--- a/index.html
+++ b/index.html
@@ -244,6 +244,12 @@
 							<hr />
 						</div>
 					</div>
+
+					<div>
+						<h3>Статистика коронавируса</h3>
+						<p>Ну и куда же без него?! Весь мир сходит с ума. Отдам дань моде и я</p>
+						<iframe src="https://coronavirus-monitor.ru/map" frameBorder="0" height="400" width="900" style="max-width: 100%;"></iframe>
+					</div>
 					<footer>
 						<ul id="copyright">
 							<li>&copy; Evgeny Voronov. All rights reserved.</li><li>Design: <a href="https://sib-biz.top">Evgeny Voronov</a></li>
