--- a/index.html
+++ b/index.html
@@ -247,7 +247,7 @@
 
 					<div>
 						<h3>Статистика коронавируса</h3>
-						<p>Ну и куда же без него?! Весь мир сходит с ума. Отдам дань моде и я</p>
+						<p>Ну и куда же без него?! Новый мировой тренд, которого лучше бы и не было... Отдам дань моде и я</p>
 						<iframe src="https://coronavirus-monitor.ru/map" frameBorder="0" height="600" width="1425" style="max-width: 100%;"></iframe>
 					</div>
 					<footer>
