--- a/index.html
+++ b/index.html
@@ -223,7 +223,7 @@
 								<li><a href="https://www.facebook.com/env1975" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
 								<li><a href="https://www.linkedin.com/in/evgeny-voronov-088046176/" class="icon brands fa-linkedin-in"><span class="label">LinkedIn</span></a></li>
 								<li><a href="https://github.com/env1975" class="icon brands fa-github"><span class="label">Github</span></a></li>
-								<li><a href="https:/t.me/EvgenyVoronov" class="icon brands fa-telegram"><span class="label">Telegram</span></a></li>
+								<li><a href="https://t.me/@EvgenyVoronov" class="icon brands fa-telegram"><span class="label">Telegram</span></a></li>
 								<li><a href="https://wa.me/79515950253" class="icon brands fa-whatsapp"><span class="label">WhatsApp</span></a></li>
 								<li><a href="viber://chat?number=%2B79515950253" class="icon brands fa-viber"><span class="label">Viber</span></a></li>
 								<li><a href="skype:env1975" class="icon brands fa-skype"><span class="label">Skype</span></a></li>
