Update index.html and main.css

--- a/index.html
+++ b/index.html
@@ -187,24 +187,24 @@
 				<div class="container medium">
 					<header>
 						<h2>Давайте сотрудничать!</h2>
-						<p>Форма отправки письма пока не работает, поэтому свяжитесь со мной через 
+						<p>Отправьте мне письмо из формы, представленной ниже или свяжитесь со мной через 
 						   социальные сети. Я обязательно отвечу.</p>
 					</header>
 					<div class="row">
 						<div class="col-12">
-							<form method="POST" action="send.php">
+							<form method="POST">
 								<div class="row">
 									<div class="col-6 col-12-small">
-										<input type="text" name="name" id="name" placeholder="Ваше имя (Форма пока не работает)" required />
+										<input type="text" name="name" id="name" placeholder="Ваше имя" required />
 									</div>
 									<div class="col-6 col-12-small">
-										<input type="text" name="email" id="email" placeholder="Email (Форма пока не работает)" required />
+										<input type="text" name="email" id="email" placeholder="Email" required />
 									</div>
 									<div class="col-12">
-										<input type="text" name="subject" id="subject" placeholder="Тема сообщения (Форма пока не работает)" required />
+										<input type="text" name="subject" id="subject" placeholder="Тема сообщения" required />
 									</div>
 									<div class="col-12">
-										<textarea name="message" id="message" placeholder="Ваше сообщение (Форма пока не работает)"></textarea>
+										<textarea name="message" id="message" placeholder="Ваше сообщение" required></textarea>
 									</div>
 									<div class="col-12">
 										<ul class="actions">
@@ -256,7 +256,8 @@
 					</div>
 					<footer>
 						<ul id="copyright">
-							<li>&copy; Evgeny Voronov. All rights reserved.</li><li>Design: <a href="https://sib-biz.top">Evgeny Voronov</a></li>
+							<li>&copy; Evgeny Voronov. All rights reserved.</li>
+							<li>Design: <a href="https://hh.ru/resume/3285450aff07de319c0039ed1f334c534e6869">Evgeny Voronov</a></li>
 						</ul>
 					</footer>
 				</div>
