мелкие правки index.html

--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
 								<p>Сайт туристического городка в штате Аризона. Проект выполнен в ходе 
 									обучения на курсе "HTML+CSS, 1-й уровень" в
 									<a href="https://htmlacademy.ru/intensive">HTML-академии</a>. 
-									Проект защищён на 100% 
+									Проект защищён на 100%. 
 								</p>
 							</article>
 						</div>
@@ -143,7 +143,8 @@
 									Проект выполняется в ходе 
 									обучения на курсе "HTML+CSS, 2-й уровень" в
 									<a href="https://htmlacademy.ru/intensive/adaptive">HTML-академии</a>. 
-									Несомненно, проект будет защищён на 100% 
+									Несомненно, проект будет защищён на 100%, ведь у меня очень классный 
+									<a href="https://htmlacademy.ru/profile/ad0v0">наставник.</a> 
 							</article>
 						</div>
 
