--- a/index.html
+++ b/index.html
@@ -136,9 +136,9 @@
 						</div>
 						<div class="col-4 col-6-medium col-12-small">
 							<article class="box style2">
-								<a href="https://nicksharf.github.io/Pink/" class="image featured"><!--Ссылку надо будет поменять на мой репозиторий-->
+								<!--<a href="https://nicksharf.github.io/Pink/" class="image featured"> Ссылку надо будет поменять на мой репозиторий-->
 									<img src="images/pink.png" width="383.317" height="268.516" alt="Сайт проекта Пинк" /></a>
-								<h3><a href="https://nicksharf.github.io/Pink/">Pink</a></h3><!--Ссылку надо будет поменять на мой репозиторий-->
+								<!--<h3><a href="https://nicksharf.github.io/Pink/">Pink</a></h3> Ссылку надо будет поменять на мой репозиторий-->
 								<p>Сайт забавного приложения для восприятия серой действительности сквозь розовые очки. 
 									Проект выполняется в ходе 
 									обучения на курсе "HTML+CSS, 2-й уровень" в
@@ -220,7 +220,6 @@
 							<hr />
 							<h3>Я в социальных сетях</h3>
 							
-							
 							<ul class="social">
 
 								<li><a href="https://www.facebook.com/env1975" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
@@ -255,7 +254,7 @@
 					<div>
 						<h3>Статистика коронавируса</h3>
 						<p>Ну и куда же без него?! Новый мировой тренд, которого лучше бы и не было... Отдам дань моде и я</p>
-						<iframe src="https://coronavirus-monitor.ru/map" frameBorder="0" height="600" width="1200" style="max-width: 100%;"></iframe>
+						<div style="position:relative;overflow:hidden;"><a href="https://yandex.ru/web-maps?utm_medium=mapframe&utm_source=maps" style="color:#eee;font-size:12px;position:absolute;top:0px;">Яндекс.Карты</a><a href="https://yandex.ru/web-maps/covid19?ll=41.775580%2C54.894027&utm_medium=mapframe&utm_source=maps&z=3" style="color:#eee;font-size:12px;position:absolute;top:14px;">Карта распространения коронавируса в России и мире</a><iframe src="https://yandex.ru/web-maps/covid19?embed=covid-map" width="100%" height="600" frameborder="0" allowfullscreen="true" style="position:relative;"></iframe></div>
 					</div>
 
 					<footer>
