--- a/index.html
+++ b/index.html
@@ -136,9 +136,9 @@
 						</div>
 						<div class="col-4 col-6-medium col-12-small">
 							<article class="box style2">
-								<!--<a href="https://nicksharf.github.io/Pink/" class="image featured"> Ссылку надо будет поменять на мой репозиторий-->
+								<a href="https://htmlacademy-adaptive.github.io/1054825-pink-19/14/" class="image featured">
 									<img src="images/pink.png" width="383.317" height="268.516" alt="Сайт проекта Пинк" /></a>
-								<!--<h3><a href="https://nicksharf.github.io/Pink/">Pink</a></h3> Ссылку надо будет поменять на мой репозиторий-->
+								<h3><a href="https://htmlacademy-adaptive.github.io/1054825-pink-19/14/">Pink</a></h3>
 								<p>Сайт забавного приложения для восприятия серой действительности сквозь розовые очки. 
 									Проект выполняется в ходе 
 									обучения на курсе "HTML+CSS, 2-й уровень" в
