--- a/index.html
+++ b/index.html
@@ -136,15 +136,15 @@
 						</div>
 						<div class="col-4 col-6-medium col-12-small">
 							<article class="box style2">
-								<a href="https://htmlacademy-adaptive.github.io/1054825-pink-19/14/" class="image featured">
+								<a href="https://env1975.github.io/Pink/index.html" class="image featured">
 									<img src="images/pink.png" width="383.317" height="268.516" alt="Сайт проекта Пинк" /></a>
-								<h3><a href="https://htmlacademy-adaptive.github.io/1054825-pink-19/14/">Pink</a></h3>
+								<h3><a href="https://env1975.github.io/Pink/index.html">Pink</a></h3>
 								<p>Сайт забавного приложения для восприятия серой действительности сквозь розовые очки. 
-									Проект выполняется в ходе 
+									Проект выполнен в ходе 
 									обучения на курсе "HTML+CSS, 2-й уровень" в
 									<a href="https://htmlacademy.ru/intensive/adaptive">HTML-академии</a>. 
-									Несомненно, проект будет защищён на 100%, ведь у меня очень классный 
-									<a href="https://htmlacademy.ru/profile/ad0v0">наставник.</a> 
+									Проект защищён на 100%, на 14 дней ранее утановленного срока. Проект выполнен по технологии БЭМ 
+									с помощью препроцессора SASS и применением автоматизации сборки GULP.</a> 
 							</article>
 						</div>
 
