--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
 								<h3>Различные сертификаты</h3>
 								<p>Имею ряд 
 								   <a href="https://drive.google.com/open?id=1MEj01rfSrKh0C5mDiJWz0tXAKSkBQPHn">сертификатов</a> о пройденных курсах в своей недавней сфере деятельности.
-								   Кроме того, получил сертификат и младшего верстальщика. Сертификаты предоставлю
+								   Кроме того, получил сертификаты и младшего верстальщика. Сертификаты предоставлю
 								   как в виде фото, так и в виде оригинала, если потребуется.</p>
 							</section>
 						</div>
@@ -118,7 +118,7 @@
 								<p>Сайт туристического городка в штате Аризона. Проект выполнен в ходе 
 									обучения на курсе "HTML+CSS, 1-й уровень" в
 									<a href="https://htmlacademy.ru/intensive">HTML-академии</a>. 
-									Проект защищён на 100%. 
+									Проект защищён на 100% на 14 дней ранее установленного срока. 
 								</p>
 							</article>
 						</div>
