--- a/index.html
+++ b/index.html
@@ -112,9 +112,9 @@
 					<div class="row">
 						<div class="col-4 col-6-medium col-12-small">
 							<article class="box style2">
-								<a href="https://env1975.github.io/1054825-sedona-27/index.html" class="image featured">
+								<a href="https://env1975.github.io/Sedona/" class="image featured">
 									<img src="images/sedona.png" width="383.317" height="268.516" alt="Сайт города Седона" /></a>
-								<h3><a href="https://env1975.github.io/1054825-sedona-27/index.html">Sedona</a></h3>
+								<h3><a href="https://env1975.github.io/Sedona/">Sedona</a></h3>
 								<p>Сайт туристического городка в штате Аризона. Проект выполнен в ходе 
 									обучения на курсе "HTML+CSS, 1-й уровень" в
 									<a href="https://htmlacademy.ru/intensive">HTML-академии</a>. 
